--- a/src/components/NoteEditor/NoteEditor.module.css
+++ b/src/components/NoteEditor/NoteEditor.module.css
@@ -645,6 +645,6 @@
 
   .content {
     flex: 1;
-    min-height: 50vh;
+    min-height: 0;
   }
 }
